# speech_recognition

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  LASeR_env.bash  README.md  install.bash  package.xml  setup.bash  setup.py  setup.sh
ci/: build-and-push-docker-image.bash  build-docker-image.bash  build-package.bash  install-package.bash  push-docker-image.bash  travis-build.bash  travis-install_packages.bash  travis-unittests.bash
egs/: lexicon.txt
egs/cfg/: get_dragonfly_grammar.py  grammar.fcfg
egs/cfg/dragonfly/: __init__.py
egs/cfg/dragonfly/actions/: __init__.py
egs/cfg/multiple_sentences/: composeThree.sh  composeTwo.sh  dict.fst  dict.fst.txt  dict.isyms  dict_three.fst  dict_three.osyms  dict_two.fst  pos.voc  sent_three.fsa  sent_three.fsa.txt  sent_two.fsa  sent_two.fsa.txt  strings_three.fst  strings_two.fst
egs/cfg/robocup_test/: sent_three.fsa.txt  sent_two.fsa.txt
egs/cfg/tutorial/: sent.fsa  sent.fsa.txt  sent.isyms  strings.fst
egs/cfg/wip/: get_dragonfly_grammar_automatic.py
egs/cfg2/: fstcompiler.py
egs/cfg2/robocup_test/: composeOne.sh  composeTwo.sh  dict.fst.txt  pos.voc  sent_one.fsa.txt
egs/cfg2/tutorial/: compileAndDraw.sh  composeExample.sh  makeSymbols.py
egs/cfg2/tutorial-1/: compileAndDraw.sh
egs/cfg2/tutorial-2/dict/: A.fst.txt  ABLE.fst.txt  ABOUT.fst.txt  ACTUALLY.fst.txt  AFTER.fst.txt  AGAIN.fst.txt  ALL.fst.txt  ALREADY.fst.txt  ALRIGHT.fst.txt  AM.fst.txt  AN.fst.txt  AND.fst.txt  ANOTHER.fst.txt  ANY.fst.txt  ANYTHING.fst.txt  ARE.fst.txt  ARRIVE.fst.txt  ARRIVING.fst.txt  AS.fst.txt  ASSUMING.fst.txt  AT.fst.txt  ATHENS.fst.txt  AVAILABLE.fst.txt  AVON.fst.txt  BACK.fst.txt  BANANAS.fst.txt  BATH.fst.txt  BE.fst.txt  BECAUSE.fst.txt  BOTH.fst.txt  BOX.fst.txt  (+212 more)
egs/cfg2/wip/: current_grammar.fcfg  expand_tree_test.py  get_dragonfly_grammar_clean.py  grammar.py  kaldi_grammar.py  print_tree_pdf.bash
egs/digits/: .gitignore  fst.bash  fst.sh  path.sh  run.bash  run.sh
egs/digits/mfcc/: cmvn_test_digits.ark  cmvn_train_digits.ark  raw_mfcc_test_digits.1.ark  raw_mfcc_train_digits.1.ark
egs/digits/utils/: htkmlf2kaldi.sh  htkscp2kaldi.sh  prepare_lang.sh  tmp  tmp1
egs/voxforge/: cmd.sh  getdata.sh  path.sh  run.sh  test_custom.sh
env-hooks/: setup.bash
gstreamer_live_spr/: run-no-gui.py  speech_recognition.launch
gstreamer_live_spr/online-data/audio/: trans.txt
julius/: run_julius.py  speech_recognition.launch
launch/: kaldi_speech_recognition.launch  speech_recognition.launch
scripts/: hmi_kaldi_node  hmi_server_kaldi_client  hmi_server_kaldi_client.py
src/: prepare.py
src/speech_recognition/: gstreamer_app.py  hmi_server_dragonfly_client.py  hmi_server_kaldi_client.py  kaldi_grammar.py  kaldi_gstreamer_app.py  kaldi_ros_publisher.py
tests/: convertcsv.csv  digits.bash
tests/cfg/: grammar.py  print_tree_pdf.bash
tests/csr/: grammar.py
tools/: make_csv.py  prepare.py  record_audio.bash
tools/modeling/: mkdynamicgrammar.bash  mkdynamicgraph.bash
tools/unsorted/: Run_Switch.sh  gen_wnet.py  make_graph.sh  myfst.sh  myrun.sh  path.sh
tools/unsorted/scripts_fst_run/: myfst.sh  myrun.sh
(+119 files in other folders)
