<?xml version="1.0"?>
<package format="2">
  <name>speech_recognition</name>
  <version>0.1.0</version>
  <description>The speech_recognition package</description>

  <maintainer email="ar13pit@gmail.com">Arpit Aggarwal</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/tue-robotics/speech_recognition</url>

  <author email="ar13pit@gmail.com">Arpit Aggarwal</author>


  <!--   <test_depend>gtest</test_depend> -->
  <!--   <doc_depend>doxygen</doc_depend> -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roslint</depend>
  <depend>rospy</depend>

  <build_export_depend>roslint</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

</package>
