<?xml version="1.0"?>
<package format="2">
  <name>speech_recognition</name>
  <version>0.1.0</version>
  <description>The speech_recognition package</description>

  <maintainer email="ar13pit@gmail.com">Arpit Aggarwal</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/tue-robotics/speech_recognition</url>

  <author email="ar13pit@gmail.com">Arpit Aggarwal</author>


  <buildtool_depend>catkin</buildtool_depend>

  <depend>grammar_parser</depend>
  <depend>kaldi</depend>
  <depend>python-future</depend>
  <depend>python-gi</depend>
  <depend>rospy</depend>

</package>
